# MCP-Server-Template

./: README.md  TEMPLATE_SUMMARY.md  pyproject.toml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: CHANGELOG.md  api-reference.md  deployment.md  development.md  quickstart.md
docs/examples/: README.md  basic-calculator.md  text-processing.md
scripts/: build.sh  healthcheck.py
src/: server.py
src/config/: __init__.py  settings.py
src/prompts/: __init__.py  example_prompts.py
src/resources/: __init__.py  example_resources.py
src/tools/: __init__.py  base.py  example_tools.py
tests/: conftest.py
